--- a/public/css/common.css
+++ b/public/css/common.css
@@ -6,11 +6,11 @@ html,body{ height:100%;}
 
 #main{ height: 100%; display: flex; flex-direction:column;}
 
-#header{width:100%; height:50px; color: #fff; background: #e54847; border-bottom: 1px solid #e54847; position: relative;}
+#header{width:100%; height:50px; color: #fff; background: #e54847; border-bottom: 1px solid #e54847; }
 #header h1{ font-size: 18px; text-align: center; line-height: 50px; font-weight: normal; }
 #header i{ position: absolute; left: 5px; top: 50%; margin-top: -13px; font-size: 26px;}
 
-#content{ flex:1; overflow:auto; margin-bottom: 50px; position: relative; display: flex; flex-direction:column;}
+#content{ flex:1; overflow:auto; margin-bottom: 50px; position: relative; display: flex; flex-direction:column;padding-top: 50px;}
 
 
 
@@ -41,9 +41,3 @@ html,body{ height:100%;}
 
 
 
-#footer{ width:100%; height:50px; background: white; border-top:2px #ebe8e3 solid; position: fixed; left: 0; bottom:0;}
-#footer ul{ display: flex; text-align: center; height:50px; align-items:center;}
-#footer ul li{ flex:1; height:40px;}
-#footer ul li.active{ color: #f03d37;}
-#footer ul i{ font-size: 20px;}
-#footer ul p{ font-size: 12px; line-height: 18px;}
